# IT1-36-Algorithms

./: CMakeLists.txt  driver_code.cpp  it1_36.h  main.cpp  phucdz.cpp  quicksort2.cpp
number/headers/: number.h
number/src/: prime_checker.cpp
sorting/: sorting.h
sorting/src/: Merge soft.cpp  quicksort - Copy.cpp  sorting.cpp
utility/: array_handler.cpp
utility/headers/: array_handler.h  utility.h
utility/src/: array_handler.cpp
